Ensure AAA text contrast on profile badge ref performant-software/cove-recogito#218

--- a/src/themes/default/avatar/index.css
+++ b/src/themes/default/avatar/index.css
@@ -25,7 +25,7 @@
   align-items: center;
   background-size: cover;
   border-radius: 50%;
-  color: #fff;
+  color: #000;
   display: flex;
   font-size: var(--font-tiny);
   font-weight: 500;
